v1.1.7-DEV
----------------------------------------------------------------------------------------------------
 * MDMustStaple was unable to create the necessary OpenSSL OBJ identifier on some platforms, 
   possibly because this fails if the OID is already configured in ```openssl.cnf```, see
   [here](https://github.com/openssl/openssl/issues/2795).
 
v1.1.6
----------------------------------------------------------------------------------------------------
 * Fixing a bug when code in assert() checks is not executed.

v1.1.5
----------------------------------------------------------------------------------------------------
 * Some attempts at code readability, increased logging level for fallback cert generation that
   was swept under the DEBUG carpet before.
 * More verbosity when *not* handing out certificates, e.g. mod_ssl asks, but mod_md has no
   idea what it is talking about. Some people report misbehaviour here.
 * Re-enabled support for md_get_credentials() function that was used in older mod_ssl
   patch, so that people with old patched servers get a chance to upgrade.
 
v1.1.4
----------------------------------------------------------------------------------------------------
 * When ACME fails to authenticate your domain, the exact server answer is logged
   as error. This helps to find out the reason for the failed challenge, for example
   when ACME reports a 'Timeout' if it could not reach your server. Implements #70.

v1.1.3
----------------------------------------------------------------------------------------------------
 * Fixed wrong mem pool use for auto-added server names.
 
v1.1.2
----------------------------------------------------------------------------------------------------
 * The first configuration check was skipping parts that are needed, especially for new
   MDs, and crash if mod_ssl calls back "too early". Reverting that change.

v1.1.1