@@ -170,6 +170,7 @@
 		B2FC60751F597352005B7D9E /* test_016d.conf */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = test_016d.conf; sourceTree = "<group>"; };
 		B2FC60761F59894A005B7D9E /* TODO.md */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = net.daringfireball.markdown; path = TODO.md; sourceTree = SOURCE_ROOT; };
 		B2FC607F1F682781005B7D9E /* mod_ssl_md-2.4.x-v5.diff */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = "mod_ssl_md-2.4.x-v5.diff"; sourceTree = "<group>"; };
+		B2FEEDDF1FFB910D0029E19C /* test_0800_stapling.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_0800_stapling.py; sourceTree = "<group>"; };
 /* End PBXFileReference section */
 
 /* Begin PBXGroup section */
@@ -348,6 +349,7 @@
 				B255730D1EE956B000E0B132 /* test_0500_drive.py */,
 				75EDD0811F13BE96003CBD39 /* test_0600_roundtrip.py */,
 				B2B81ED71F17BF3200E35CA3 /* test_0700_auto.py */,
+				B2FEEDDF1FFB910D0029E19C /* test_0800_stapling.py */,
 				B255730C1EE6D11200E0B132 /* test_base.py */,
 				B2D309F71EC1AD26007BECC8 /* test.ini.in */,
 				B2123B851F2DD7A200267CAF /* unit */,
